# libcr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
libcr/: CMakeLists.txt  cr_context.h  cr_simple.h  eventloop.c  eventloop.h
src/: CMakeLists.txt  asyn_load_file.c  consumer.c  main.c  produce.c  produce_call_consumer.c  producer.c  producer_call_consumer.c  switch_error.c  test.c  testio.c  testp.c  toy1.c  toy2.c  toy3.c  toy4.c  toy5.c  using_eventloop.c
