include_directories(${PROJECT_SOURCE_DIR}/libcr)
set(APP_SRC main.c)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
#add_executable(hello ${APP_SRC})
add_executable(consumer produce.c)
add_executable(produce consumer.c)
#add_executable(produce_call_consumer produce_call_consumer.c)
#add_executable(toy1 toy1.c)
#add_executable(toy2 toy2.c)
# target_link_libraries(hello libcr)